# OdinAnalytics

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  OdinAnalytics.sln  README.md  build.bat  build.sh  setup.bat  start_up.bat
.github/workflows/: linux.yaml  linux.yml  windows.yml
api/: xl_autogen.py
api/yml_interface/: xl_base.yml  xl_time.yml
cmake/: ConfigCompile.cmake  FindDeps.cmake  FindXLLSDK.cmake  OAConfig.cmake.in  oa_pdb_install.cmake  oa_unity_enable_unique_id.cmake
include/oa/: common.h  dllexport.h  fixed_string.h  platform.h  python.h  rtti.h  version.h.in  warnings.h
include/oa/config/: dllexport.h  paths.h
include/oa/internal/: unity.h
include/oa/testing/: gtest.h
sheets/: Test.xlsx  array_test_sheet.xlsx  oxl.xlam  oxl.xlsm  time_test_sheet.xlsx
solutions/BondMath/: BondMath.cpp  BondMath.h  BondMath.vcxproj  BondMath.vcxproj.filters  CashFlow.cpp  CashFlow.h  Securities.cpp  Securities.h
solutions/UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters  packages.config
solutions/dao/: dao.vcxproj  dao.vcxproj.filters
solutions/derived_time/: derived_time.vcxproj  derived_time.vcxproj.filters  packages.config
solutions/enum_mappers/: enum_mappers.vcxproj  enum_mappers.vcxproj.filters
solutions/helpers/: Helpers.vcxproj  Helpers.vcxproj.filters  packages.config
solutions/oxl/: oxl.vcxproj  oxl.vcxproj.filters  packages.config
solutions/static_data_cache/: packages.config  static_data_cache.vcxproj  static_data_cache.vcxproj.filters
solutions/time/: Time.vcxproj  Time.vcxproj.filters
src/: CMakeLists.txt
src/config/: CMakeLists.txt  paths.cpp
src/dao/: CMakeLists.txt  calendar_dao.cpp  calendar_dao.h
src/derived_time/: CMakeLists.txt  derived_time_enums.h
src/derived_time/cashflow_gen/: cashflow_gen.cpp  cashflow_gen.h  cashflow_struct.h
src/derived_time/date_formula/: business_date_formula.cpp  business_date_formula.h  date_formula.cpp  date_formula.h
src/enum_mappers/: CMakeLists.txt  time_enum_mappers.cpp  time_enum_mappers.h
src/helpers/: CMakeLists.txt  library_error_utils.cpp  library_error_utils.h  utils.cpp  utils.h  warnings.h
src/helpers/str_utils/: str_utils.cpp  str_utils.h
src/oxl/: CMakeLists.txt  excel_base_funcs.cpp  excel_base_funcs.h  excel_functions.cpp  oxlgen.py  time_xl.cpp  time_xl.h  xl_base.yml  xl_time.yml
src/oxl/auto_gen/: auto_gen_time.cpp  auto_gen_time_reg_fns.h  autogen_excel.cpp  autogen_excel_reg_funcs.h
src/oxl/xl_api/: cache_xl_obj.cpp  cache_xl_obj.h  excel_base.cpp  excel_base.h  xl_array.cpp  xl_array.h  xl_converter_funcs.cpp  xl_converter_funcs.h  xl_dictionary.cpp  xl_dictionary.h  xl_uitls.h  xl_variant.h  xloper_converter.cpp  xloper_converter.h
src/static_data_cache/: CMakeLists.txt  calendar_cache.cpp  calendar_cache.h
src/time/: CMakeLists.txt  calendar.cpp  calendar.h  calendar_data_struct.h  date.cpp  date.h  tenor.cpp  tenor.h  time_enums.h
src/time/date_adjust/: adjustment_factory.cpp  adjustment_factory.h  date_adjust_base.h  date_adjust_following.cpp  date_adjust_following.h  date_adjust_modified_following.cpp  date_adjust_modified_following.h  date_adjust_plain.h  date_adjust_preceding.cpp  date_adjust_preceding.h
src/time/day_count/: day_count_30_360_bond_basis.cpp  day_count_30_360_bond_basis.h  day_count_30_360e_isda.cpp  day_count_30_360e_isda.h  day_count_30_e_360_eurobond_basis.cpp  day_count_30_e_360_eurobond_basis.h  day_count_act_360.cpp  day_count_act_360.h  day_count_act_365_fixed.cpp  day_count_act_365_fixed.h  day_count_act_365_fixed_test.cpp  day_count_act_act.cpp  day_count_act_act.h  day_count_base.h  day_counter_factory.cpp  day_counter_factory.h
src/unit_test/: CMakeLists.txt  bond_math_test.cpp  calendar_test.cpp  date_test.cpp  fixed_string_test.cpp  pch.h  tenor_test.cpp  test_main.cpp
src/unit_test/config/: paths_test.cpp
src/unit_test/dao/: calendar_dao_test.cpp
src/unit_test/date_formula/: date_formula_test.cpp
src/unit_test/derived_time/cashflow_gen/: cashflow_gen_test.cpp
src/unit_test/derived_time/date_formula/: business_date_formula_test.cpp  date_formula_test.cpp
src/unit_test/helpers/: business_logic_check_test.cpp  enum_test.cpp
src/unit_test/oxl/: handle_prefixer_test.cpp
src/unit_test/static_data_cache/: static_data_cache_test.cpp
src/unit_test/time/date_adjust/: adjustment_factory_test.cpp  date_adjust_following_test.cpp  date_adjust_modified_following.cpp  date_adjust_plain_test.cpp  date_adjust_preceding_test.cpp
src/unit_test/time/day_count/: day_count_30_360_bond_basis_test.cpp  day_count_30_360_e_isda_test.cpp  day_count_30_e_360_eurobond_basis_test.cpp  day_count_act_360_test.cpp  day_count_act_act_test.cpp  day_count_factory_test.cpp
static_data/calendars/: BMA.hol  LNB.hol  NYB.hol
swig/oa/: python.i
test/: CMakeLists.txt
test/oa_ext_usage_test/: CMakeLists.txt  oa_print_dirs.cpp
tools/: common.ps1
